--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -88,7 +88,7 @@ templ Post(postData PostData) {
 			class="lg:h-[35vw] h-[85vw] lg:w-[35vw] w-[85vw] mx-auto carousel carousel-center space-x-2 rounded-lg bg-transparent"
 		>
 			if len(postData.ImgSrc) > 1 {
-				@swapButton()
+				@swapButton(len(postData.ImgSrc))
 			}
 			for _, imgSrc := range postData.ImgSrc {
 				<div class="carousel-item w-full">
@@ -161,11 +161,12 @@ templ swapIndicator(size int, id string) {
 	}
 }
 
-templ swapButton() {
+templ swapButton(size int) {
 	<div
-		class="opacity-0 lg:opacity-100 flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-6"
+		class="opacity-100 flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-6"
 	>
 		<button
+			x-show="slide > 0"
 			x-on:click="scrollRight(-1)"
 			id="prevButton"
 			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
@@ -191,9 +192,10 @@ templ swapButton() {
 		</button>
 	</div>
 	<div
-		class="opacity-0 lg:opacity-100 flex flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-6"
+		class="opacity-100 flex flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-6"
 	>
 		<button
+			x-show={ fmt.Sprintf("slide < %d", size-1) }
 			x-on:click="scrollRight(1)"
 			id="nextButton"
 			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
