--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -70,7 +70,6 @@ templ Post(postData PostData) {
 	<div
 		x-data="{
             slide: 0,
-            scroll: null
         }"
 		class="w-full rounded-none card mb-2 p-4 text-base-content"
 	>
@@ -83,7 +82,6 @@ templ Post(postData PostData) {
                     slide = Math.floor($el.scrollLeft / $el.offsetWidth);
                 }
 			}"
-			x-init="onScroll();scroll=scrollRight"
 			x-on:scroll="onScroll()"
 			class="lg:h-[35vw] h-[85vw] lg:w-[35vw] w-[85vw] mx-auto carousel carousel-center space-x-2 rounded-lg bg-transparent"
 		>
@@ -163,12 +161,11 @@ templ swapIndicator(size int, id string) {
 
 templ swapButton(size int) {
 	<div
-		class="opacity-100 flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-6"
+		x-show.important="slide > 0"
+		class="flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-6"
 	>
-		<button
-			x-show="slide > 0"
+		<span
 			x-on:click="scrollRight(-1)"
-			id="prevButton"
 			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
 		>
 			<svg
@@ -189,15 +186,14 @@ templ swapButton(size int) {
 					</g>
 				</g>
 			</svg>
-		</button>
+		</span>
 	</div>
 	<div
-		class="opacity-100 flex flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-6"
+		x-show={ fmt.Sprintf("slide < %d", size-1) }
+		class="flex flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-6"
 	>
-		<button
-			x-show={ fmt.Sprintf("slide < %d", size-1) }
+		<span
 			x-on:click="scrollRight(1)"
-			id="nextButton"
 			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
 		>
 			<svg
@@ -219,7 +215,7 @@ templ swapButton(size int) {
 					</g>
 				</g>
 			</svg>
-		</button>
+		</span>
 	</div>
 }
 
