--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -70,6 +70,7 @@ templ Post(postData PostData) {
 	<div
 		x-data="{
             slide: 0,
+            scroll: null
         }"
 		class="w-full rounded-none card mb-2 p-4 text-base-content"
 	>
@@ -82,6 +83,7 @@ templ Post(postData PostData) {
                     slide = Math.floor($el.scrollLeft / $el.offsetWidth);
                 }
 			}"
+			x-init="scroll = scrollRight"
 			x-on:scroll="onScroll()"
 			class="lg:h-[35vw] h-[85vw] lg:w-[35vw] w-[85vw] mx-auto carousel carousel-center space-x-2 rounded-lg bg-transparent"
 		>
@@ -115,7 +117,7 @@ templ swapIndicator(size int, id string) {
 			for i := 0; i < size; i++ {
 				<span
 					class="cursor-pointer"
-					x-on:click={ fmt.Sprintf("scroll(%d - slide)", i) }
+					x-on:click={ fmt.Sprintf("scroll(%d - slide); ", i) }
 					x-show={ "slide !== " + strconv.Itoa(i) }
 				>
 					<svg
