ui : adding swapButton bg to increase button visibility

--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -168,7 +168,7 @@ templ swapButton(size int) {
 	>
 		<span
 			x-on:click="scrollRight(-1)"
-			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
+			class="btn btn-circle border-0 bg-neutral-100/40 hover:bg-neutral-100/70 text-neutral-950  btn-lg"
 		>
 			<svg
 				class="w-4/5 h-4/5 object-contain"
@@ -196,7 +196,7 @@ templ swapButton(size int) {
 	>
 		<span
 			x-on:click="scrollRight(1)"
-			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
+			class="btn btn-circle border-0 bg-neutral-100/40 hover:bg-neutral-100/70  text-neutral-950  btn-lg"
 		>
 			<svg
 				class="w-4/5 h-4/5 object-contain"
