refactor : using alpine js instead of vanilla

--- a/internal/views/shared/navbar.templ
+++ b/internal/views/shared/navbar.templ
@@ -8,17 +8,19 @@ templ NavBar() {
 			<a class="btn btn-ghost text-primary font-black text-xl sm:text-3xl">Lorem Ipsum</a>
 		</div>
 		<div
+			x-data="{
+                loggedIn : false,
+            }"
 			class="flex-none flex space-x-1 md:space-x-4"
 			hx-get="/api/v1/user/myName"
 			hx-target="#where-the-username-is"
 			hx-swap="innerHTML"
 			hx-trigger="load"
-			hx-on::after-swap="profileScript(event)"
+			x-on:htmx:after-swap="loggedIn = true; $refs.loginbtn.remove()"
 		>
 			@component.ThemeSwitch()
-			@profileScript()
-			<a id="remove-this" href="/login" class="btn md:btn-md btn-sm text-lg md:text-2xl font-bold btn-ghost rounded-btn">Sign In</a>
-			<div id="remove-this-hidden" class="hidden h-full dropdown dropdown-end">
+			<a x-ref="loginbtn" href="/login" class="btn md:btn-md btn-sm text-lg md:text-2xl font-bold btn-ghost rounded-btn">Sign In</a>
+			<div x-show="loggedIn" class="h-full dropdown dropdown-end">
 				<div>
 					<button id="where-the-username-is" class="btn md:btn-md btn-sm text-lg md:text-2xl font-bold btn-ghost rounded-btn">
 						username
@@ -26,7 +28,7 @@ templ NavBar() {
 				</div>
 				<ul
 					tabindex="0"
-					class="menu menu-sm dropdown-content mt-3 z-[1] 
+					class="rounded-xl menu menu-sm dropdown-content mt-3 z-[1] 
                         p-2 shadow bg-base-300 w-52"
 				>
 					<li><a hx-get="/api/v1/user/logout" hx-swap="none">Logout</a></li>
@@ -34,13 +36,4 @@ templ NavBar() {
 			</div>
 		</div>
 	}
-}
-
-templ profileScript() {
-	<script>
-	function profileScript(event) {
-		document.getElementById('remove-this-hidden').classList.remove('hidden');
-		document.getElementById('remove-this').classList.add('hidden');
-	}
-	</script>
 }
