--- a/internal/views/home/form.templ
+++ b/internal/views/home/form.templ
@@ -41,13 +41,13 @@ templ Form() {
 				</button>
 			</div>
 		</div>
-		<div id="selected-images"></div>
+		<div id="selected-images" class="flex flex-row space-x-4 items-center justify-center"></div>
 		<script src="/api/v1/static/script/util.js"></script>
 		<template id="selected-file-template">
-			<div class="form-control flex flex-row join">
-				<a class="file-name flex-1 text-start btn btn-ghost rounded-md btn-xs join-item truncate">Lorem Ipsum</a>
-				<button class="remove-button flex-0 btn btn-xs hover:bg-red-300 bg-red-500 rounded-md join-item">
-					<svg class="h-full object-cover" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M5 5L19 19M5 19L19 5" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+			<div class="relative">
+				<img class="file-image mt-3 mr-3 h-24 w-24 object-cover"/>
+				<button class="absolute top-0 right-0 remove-button flex-0 btn btn-xs border-0 hover:bg-red-300 bg-red-500 btn-circle">
+					<svg class="h-3/5 object-contain" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M5 5L19 19M5 19L19 5" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
 				</button>
 			</div>
 		</template>
