--- a/internal/views/home/form.templ
+++ b/internal/views/home/form.templ
@@ -41,12 +41,12 @@ templ Form() {
 				</button>
 			</div>
 		</div>
-		<div id="selected-images" class="flex flex-row space-x-4 items-center justify-center"></div>
+		<div id="selected-images" class="flex flex-wrap flex-row items-center justify-center"></div>
 		<script src="/api/v1/static/script/util.js"></script>
 		<template id="selected-file-template">
-			<div class="relative">
-				<img class="file-image mt-3 mr-3 h-24 w-24 object-cover"/>
-				<button class="absolute top-0 right-0 remove-button flex-0 btn btn-xs border-0 hover:bg-red-300 bg-red-500 btn-circle">
+			<div class="relative h-28 w-28 m-1 pr-3 pt-3">
+				<img class="file-image object-cover h-full w-full cursor-pointer"/>
+				<button class="absolute top-0 right-0 remove-button btn btn-xs border-0 hover:bg-red-300 bg-red-500 btn-circle">
 					<svg class="h-3/5 object-contain" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M5 5L19 19M5 19L19 5" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
 				</button>
 			</div>
