--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -130,7 +130,16 @@ templ Post(postData PostData) {
 		</div>
 		@swapIndicator(len(postData.ImgSrc), postData.PostID)
 		<div class="card-body px-2 py-0">
-			<h2 class="card-title text-base-content font-bold">{ postData.Username }</h2>
+			<div class="w-full flex flex-row items-center justify-between">
+				<h2 class="text-start card-title text-base-content font-bold">{ postData.Username }</h2>
+				<svg class="btn btn-ghost btn-xs fill-base-content h-8 object-contain" fill="currentText" viewBox="0 0 32 32" enable-background="new 0 0 32 32" id="Glyph" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+					<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+					<g id="SVGRepo_iconCarrier">
+						<path d="M16,13c-1.654,0-3,1.346-3,3s1.346,3,3,3s3-1.346,3-3S17.654,13,16,13z" id="XMLID_287_"></path><path d="M6,13c-1.654,0-3,1.346-3,3s1.346,3,3,3s3-1.346,3-3S7.654,13,6,13z" id="XMLID_289_"></path>
+						<path d="M26,13c-1.654,0-3,1.346-3,3s1.346,3,3,3s3-1.346,3-3S27.654,13,26,13z" id="XMLID_291_"></path>
+					</g>
+				</svg>
+			</div>
 			{ postData.Content }
 		</div>
 		@ReactSection(postData.ReactStruct)
@@ -196,7 +205,7 @@ templ swapIndicator(size int, id string) {
 templ swapButton(size int) {
 	<div
 		x-show.important="slide > 0 && !inScroll"
-		class="flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-8"
+		class="hidden sm:flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-8"
 	>
 		<span
 			x-on:click="scrollRight(-1)"
@@ -224,7 +233,7 @@ templ swapButton(size int) {
 	</div>
 	<div
 		x-show={ fmt.Sprintf("slide < %d && !inScroll", size-1) }
-		class="flex flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-8"
+		class="hidden sm:flex  flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-8"
 	>
 		<span
 			x-on:click="scrollRight(1)"
