--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -54,25 +54,26 @@ templ postLoader(url string, id string) {
 	</div>
 }
 
-templ ManyPost(postDatas []PostData, manyPostType ManyPostType) {
+templ ManyPost(audience string, postDatas []PostData, manyPostType ManyPostType) {
 	if manyPostType == ManyPostTypeBoth || manyPostType == ManyPostTypeNewer {
 		@postLoader(newerPost(postDatas[0]), "newer-post-loader")
 	}
 	for _, postData := range postDatas {
-		@Post(postData)
+		@Post(postData, audience)
 	}
 	if manyPostType == ManyPostTypeBoth || manyPostType == ManyPostTypeOlder {
 		@postLoader(olderPost(postDatas[len(postDatas)-1]), "older-post-loader")
 	}
 }
 
-templ Post(postData PostData) {
+templ Post(postData PostData, audience string) {
 	<div
 		x-data="{
             slide: 0,
             scroll: null,
             inScroll: false
         }"
+		x-ref="parentPost"
 		class="w-full rounded-none card mb-2 p-4 text-base-content"
 	>
 		<div
@@ -132,13 +133,9 @@ templ Post(postData PostData) {
 		<div class="card-body px-2 py-0">
 			<div class="w-full flex flex-row items-center justify-between">
 				<h2 class="text-start card-title text-base-content font-bold">{ postData.Username }</h2>
-				<svg class="btn btn-ghost btn-xs fill-base-content h-8 object-contain" fill="currentText" viewBox="0 0 32 32" enable-background="new 0 0 32 32" id="Glyph" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-					<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-					<g id="SVGRepo_iconCarrier">
-						<path d="M16,13c-1.654,0-3,1.346-3,3s1.346,3,3,3s3-1.346,3-3S17.654,13,16,13z" id="XMLID_287_"></path><path d="M6,13c-1.654,0-3,1.346-3,3s1.346,3,3,3s3-1.346,3-3S7.654,13,6,13z" id="XMLID_289_"></path>
-						<path d="M26,13c-1.654,0-3,1.346-3,3s1.346,3,3,3s3-1.346,3-3S27.654,13,26,13z" id="XMLID_291_"></path>
-					</g>
-				</svg>
+				<div>
+					@OptionButton(audience == postData.Username && audience != "", postData.PostID)
+				</div>
 			</div>
 			<div class="text-justify">{ postData.Content }</div>
 		</div>
@@ -148,6 +145,30 @@ templ Post(postData PostData) {
 			ReplyCount: postData.CommentCount,
 		})
 	</div>
+}
+
+templ OptionButton(isOwner bool, postID string) {
+	if isOwner {
+		<button
+			hx-delete={ "/api/v1/post/" + postID }
+			hx-confirm="Are you sure you wish to delete this Post?"
+			x-on:htmx:after-on-load="$refs.parentPost.remove()"
+			class="btn btn-ghost btn-square btn-sm"
+			type="button"
+		>
+			<svg class="object-contain h-3/5" fill="currentColor" viewBox="-3 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="currentColor">
+				<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+				<g id="SVGRepo_iconCarrier">
+					<title>trash</title> <desc>Created with Sketch Beta.</desc> <defs></defs>
+					<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+						<g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-261.000000, -205.000000)" fill="currentColor">
+							<path d="M268,220 C268,219.448 268.448,219 269,219 C269.552,219 270,219.448 270,220 L270,232 C270,232.553 269.552,233 269,233 C268.448,233 268,232.553 268,232 L268,220 L268,220 Z M273,220 C273,219.448 273.448,219 274,219 C274.552,219 275,219.448 275,220 L275,232 C275,232.553 274.552,233 274,233 C273.448,233 273,232.553 273,232 L273,220 L273,220 Z M278,220 C278,219.448 278.448,219 279,219 C279.552,219 280,219.448 280,220 L280,232 C280,232.553 279.552,233 279,233 C278.448,233 278,232.553 278,232 L278,220 L278,220 Z M263,233 C263,235.209 264.791,237 267,237 L281,237 C283.209,237 285,235.209 285,233 L285,217 L263,217 L263,233 L263,233 Z M277,209 L271,209 L271,208 C271,207.447 271.448,207 272,207 L276,207 C276.552,207 277,207.447 277,208 L277,209 L277,209 Z M285,209 L279,209 L279,207 C279,205.896 278.104,205 277,205 L271,205 C269.896,205 269,205.896 269,207 L269,209 L263,209 C261.896,209 261,209.896 261,211 L261,213 C261,214.104 261.895,214.999 262.999,215 L285.002,215 C286.105,214.999 287,214.104 287,213 L287,211 C287,209.896 286.104,209 285,209 L285,209 Z" id="trash" sketch:type="MSShapeGroup"></path>
+						</g>
+					</g>
+				</g>
+			</svg>
+		</button>
+	}
 }
 
 templ swapIndicator(size int, id string) {
