testing CI/BUILD

--- a/internal/views/shared/navbar.templ
+++ b/internal/views/shared/navbar.templ
@@ -5,7 +5,7 @@ import "github.com/muhhae/lorem-ipsum/pkg/component"
 templ NavBar() {
 	@component.Navbar() {
 		<div class="flex-1">
-			<a class="btn btn-ghost text-primary font-black text-xl sm:text-3xl">Lorem Ipsum</a>
+			<a class="btn btn-ghost text-primary font-black text-xl sm:text-3xl">Docker Lorem Ipsum</a>
 		</div>
 		<div
 			x-data="{
